# i2pd-exporter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile.build  LICENSE  README.md  build-linux-docker.sh  build-static-linux-docker.sh
.github/workflows/: build.yml  lint.yml  test.yml
src/: config.rs  lib.rs  main.rs  metrics.rs  server.rs  version.rs
src/i2pcontrol/: client.rs  mod.rs  rpc.rs  types.rs
tests/: cli.rs  metrics_golden.rs
tests/fixtures/: routerinfo_full.json  routerinfo_full.prom
